  * analyze(): interpolWin, interpolTol, interpolCert moved to a new argument "interpol = list(win, tol, cert)"
  * compareSounds(): multivariate DTW, different input formats, new arguments, etc.

NEW FUNCTIONS:
  * reverb(): adds reverberation and/or echo to a sound
  * getEnv(): returns the amplitude envelope of a sound

MINOR:
  * spectrogram(), analyze(): a new argument "extraContour" for plotting something over the spectrogram
  * analyze(): spectral slope (specSlope) is returned in dB/kHz
  * analyze() calls ssm() and returns a novelty contour (a new argument "novelty")
  * analyze(): updated cepstral pitch tracking, new argument in pitchCep = list(cepPenalty) to regulate how much high-frequency cepstral candidates are mistrusted
  * analyze() returns strength of subharmonics per frame (output "subRatio" and "subDep")
  * pitch_app(), formant_app(): user zoom settings preserved when moving between audio files in queue
  * formant_app(): added a plot of relative formant frequencies to compare with IPA vowels
  * soundgen(): pitch anchors can contain NAs, eg "pitch = c(150, 200, NA, 110)" - the 3rd quarter will be unvoiced
  * addFormants(): new argument "zFun" for arbitrary transformations of the spectrogram between STFT and iSTFT (eg for de-noising, spectral warping, etc.)
  * flatEnv() AKA compressor(): a new argument "compression" regulates the amount of compression, updated plotting
  * ssm(): a new argument "sparse" for quickly extracting just the novelty contour from long sounds, changes in default settings, input "audiogram" renamed to "melspec", etc.

BUGS FIXED:
  * formant_app(): fixed occasional crashing when scrolling with left/right buttons, other small-scale debugging
  * soundgen(): fixed a problem with occasionally cutting off sounds with sharp attack, which made them end with audible clicks, and with tempEffects(formDisp = 0)